Listado en las views

--- a/proyecto_intermedio/Proyecto_intermedio/AppCurso/templates/AppCurso/alumnos.html
+++ b/proyecto_intermedio/Proyecto_intermedio/AppCurso/templates/AppCurso/alumnos.html
@@ -13,14 +13,13 @@
           <div class="container">
             <div class="carousel-caption text-start">
               <h1> REGISTRO DE ALUMNOS </h1>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
+              <h2>Alumnos registrados:</h2>
+              <ul>
+                {% for alumno in alumnos_registrados %}
+                <li>{{alumno.nombre_completo}}- {{alumno.curso}}</li>
+                {% endfor %}
+              </ul>
+
               <br>
               <br>
               <br>
