--- a/proyecto_intermedio/Proyecto_intermedio/AppCurso/templates/AppCurso/profesores.html
+++ b/proyecto_intermedio/Proyecto_intermedio/AppCurso/templates/AppCurso/profesores.html
@@ -13,14 +13,12 @@
           <div class="container">
             <div class="carousel-caption text-start">
               <h1> REGISTRO DE PROFESORES </h1>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
+              <h2>Profesores registrados:</h2>
+              <ul>
+                {% for profesor in profesores_registrados%}
+                <li> {{profesor.nombre_completo}} - {{profesor.curso}}</li>
+                {% endfor %}
+              </ul>
               <br>
               <br>
               <br>
