--- a/proyecto_intermedio/Proyecto_intermedio/AppCurso/templates/AppCurso/entregables.html
+++ b/proyecto_intermedio/Proyecto_intermedio/AppCurso/templates/AppCurso/entregables.html
@@ -13,21 +13,19 @@
           <div class="container">
             <div class="carousel-caption text-start">
               <h1> ENTREGA DE TRABAJOS </h1>
+              <br>
+              <form action="" method="post">
+                {{Entrega_trabajo.as_p}}
+                <input type="submit" value="Realizar entrega">
+              </form>
+              <br>
+              <br>
               <h2>Trabajos entregados:</h2>
               <ul>
                 {% for trabajo in entrega_trabajo%}
                 <li>{{trabajo.nombre_alumno}} - {{trabajo.curso}}</li>
                 {% endfor %}
               </ul>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
               <br>
               <br>
               <br>
