Views, url y templates

--- a/proyecto_intermedio/Proyecto_intermedio/AppCurso/templates/AppCurso/base.html
+++ b/proyecto_intermedio/Proyecto_intermedio/AppCurso/templates/AppCurso/base.html
@@ -39,7 +39,7 @@
                     <a class="nav-link active" aria-current="page" href="{% url 'Entrega-de-tareas' %}">Entregas</a>
                   </li>
               </ul>
-              <form class="d-flex" action = "{% url 'Buscar-alumno' %}">
+              <form class="d-flex" action = "{% url 'buscar_alumnos' %}">
                 <input class="form-control me-2" name = "criterio" type="search" placeholder="Buscar alumno" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">Search</button>
               </form>
